# neo-fdtd

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  LICENSE.txt  README.md  REUSE.toml  conanfile.py  conanfile.txt  pyproject.toml  requirements.txt  run.sh  run_2d.sh  run_3d.sh
.github/: dependabot.yml
.github/workflows/: build.yml  pip.yml  reuse.yml
benchmarks/: README.md
cmake/profile/: windows_sycl
data/materials/: absorber_8000_100mm.h5  absorber_8000_200mm.h5  absorber_8000_200mm_gap_100mm.h5  absorber_8000_200mm_gap_200mm.h5  absorber_8000_50mm.h5  almost_rigid.h5  concrete_painted.h5  ctk_acoustic_panel.h5  ctk_altar.h5  ctk_audience.h5  ctk_carpet.h5  ctk_ceiling.h5  ctk_chair.h5  ctk_tile.h5  ctk_walls.h5  ctk_window.h5  door_iron.h5  door_wood.h5  floor_wood.h5  floor_wood_on_concrete.h5  glas_thick.h5  leather_arm_chair.h5  mv_chairs.h5  mv_floor.h5  mv_plasterboard.h5  mv_window.h5  mv_wood.h5  office_dead.h5  office_medium.h5  sabine_0001.h5  sabine_001.h5  sabine_01.h5  sabine_02.h5  sabine_03.h5  sabine_04.h5  sabine_05.h5  sabine_1.h5  sabine_2.h5  sabine_3.h5  sabine_4.h5  (+10 more)
data/models/Anechoic/: Anechoic_cpu.py  model.json
data/models/CTK_Church/: CTK_Church.py  CTK_Church_SU2017.skp  CTK_Church_setup.py  CTK_Church_viz.py  CTK_gpu.py  CTK_viz.py  README.md  model_export.json
data/models/Diffusor/: Diffusor.py
data/models/InfiniteBaffle/: InfiniteBaffle.py  InfiniteBaffle_cpu.py  InfiniteBaffle_model.py  InfiniteBaffle_setup.py  model.json
data/models/LivingRoom/: LivingRoom.py  LivingRoom_cpu.py  LivingRoom_model.py  LivingRoom_viz.py  model.json
data/models/Localization/: Localization.py  Localization_cpu.py  Localization_model.py  Localization_setup.py
data/models/Modes/: Modes.py  Modes_cpu.py  Modes_model.py  Modes_setup.py  Modes_viz.py  model.json
data/models/Modes2D/: Modes2D.py
data/models/Musikverein_ConcertHall/: MV_gpu.py  MV_viz.py  Musikverein_ConcertHall.py  Musikverein_ConcertHall_setup.py  README.md  model_export.json  sources.csv
data/models/Office/: generate_model.py  model_export.json
data/models/ProStudio/: ProStudio.py  ProStudio_cpu.py  ProStudio_model.py  ProStudio_viz.py  model.json
data/models/Studio/: Studio.py  Studio_cpu.py  Studio_model.py  Studio_setup.py  Studio_viz.py  model.json
data/models/Tobi_Office/: generate_model.py  model_export.json
doc/: build.md  from_scratch_monitor_speaker.md  from_scratch_music_studio.md  todo.md
models/CTK_Church/: CTK_Church.py  CTK_Church_viz.py  README.md
models/Diffusor/: Diffusor.py
models/Diffusor3D/: Diffusor3D.py  model.json
models/InfiniteBaffle/: InfiniteBaffle.py  model.json
models/LivingRoom/: LivingRoom.py  LivingRoom_viz.py  model.json
models/Localization/: Localization.py  model.json
models/Modes/: Modes.py  Modes_viz.py
models/Modes2D/: Modes2D.py
models/Musikverein_ConcertHall/: Musikverein_ConcertHall.py  Musikverein_ConcertHall_viz.py  Musikverein_SU2017.skp  sources.csv
models/ProStudio/: ProStudio.py  ProStudio_viz.py  model.json
models/Studio/: Studio.py  Studio_viz.py  model.json
profile/: linux_sycl
python/: test_script_CTK_cart_gpu.py  test_script_MV_fcc_gpu.py
src/2D/: CMakeLists.txt  Makefile  fdtd.cpp  fdtd.m  fdtd.py  report.py
src/3D/: CMakeLists.txt  Makefile  cpu_engine.cpp  cpu_engine.hpp  fdtd_common.cpp  fdtd_common.hpp  fdtd_data.cpp  fdtd_data.hpp  gpu_engine.hpp  helper_funcs.cpp  helper_funcs.hpp  main.cpp
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/main_2d/: CMakeLists.txt  README.md  engine.cpp  engine.hpp  engine_native.cpp  engine_native.hpp  engine_sycl.cpp  engine_sycl.hpp  main.cpp
src/cpp/main_3d/: CMakeLists.txt  cpu_engine.cpp  engine_cpu.cpp  engine_cpu.hpp  engine_cuda.hpp  engine_gpu.cu  engine_gpu.hpp  fdtd_data.cpp  gpu_engine.hpp  helper_funcs.cpp  main.cpp
src/cpp/pffdtd/: assert.hpp  config.hpp  double.hpp  engine_2d_cpu.cpp  engine_2d_cpu.hpp  engine_2d_native.cpp  engine_2d_sycl.cpp  engine_2d_sycl.hpp  engine_3d_cpu.cpp  engine_3d_cpu.hpp  engine_3d_cuda.cu  engine_3d_cuda.hpp  engine_3d_sycl.cpp  engine_3d_sycl.hpp  engine_cpu_2d.cpp  engine_cpu_2d.hpp  engine_cpu_3d.cpp  engine_cpu_3d.hpp  engine_cuda.cu  engine_cuda.hpp  engine_cuda_3d.cu  engine_cuda_3d.hpp  engine_metal.hpp  engine_metal.metal  engine_metal_2d.hpp  engine_metal_2d.mm  engine_metal_3d.hpp  engine_metal_3d.mm  engine_openmp.cpp  engine_sycl_2d.cpp  engine_sycl_2d.hpp  engine_sycl_3d.cpp  engine_sycl_3d.hpp  exception.hpp  float.hpp  hdf.cpp  hdf.hpp  mat_quad.hpp  mdspan.hpp  metal.hpp  (+16 more)
src/js/: index.html  main.js
src/model_viewer/: README.md  index.html
src/model_viewer/js/: OrbitControls.js  app.js  common.js  dat.gui.js  stats.js  three.js  three.min.js
src/native/: cpu_engine.c  cpu_engine.cpp  cpu_engine.h  cpu_engine.hpp  fdtd_common.c  fdtd_common.cpp  fdtd_common.h  fdtd_common.hpp  fdtd_data.c  fdtd_data.cpp  fdtd_data.h  fdtd_data.hpp  fdtd_main.c  gpu_engine.hpp  helper_funcs.c  helper_funcs.cpp  helper_funcs.hpp  main.cpp
src/python/: Anechoic_cpu.py  CTK_gpu.py  CTK_viz.py  LivingRoom_cpu.py  LivingRoom_model.py  LivingRoom_viz.py  MV_gpu.py  MV_viz.py  Modes_cpu.py  Modes_model.py  Modes_viz.py  Office_cpu.py  Office_model.py  Office_viz.py  ProStudio_cpu.py  ProStudio_model.py  ProStudio_viz.py  Studio_cpu.py  Studio_model.py  Studio_viz.py  build_mats.py  calc_t60.py  compare_ir.py  conda_pffdtd.yml  out.csv  pip_requirements.txt  sim_setup.py  test_script_CTK_cart_gpu.py  test_script_CTK_cart_viz.py  test_script_LivingRoom_cpu.py  test_script_LivingRoom_viz.py  test_script_MV_fcc_gpu.py  test_script_MV_fcc_viz.py  test_script_Office_cpu.py  test_script_Tobi_cart_cpu.py  test_script_Tobi_cart_viz.py
src/python/air_abs/: modal_filter.py  ola_filter.py  test_air_abs_filters.py  visco_filter.py
src/python/analysis/: response.py  room_modes.py  t60.py  waterfall.py
src/python/common/: box.py  myfuncs.py  room_builder.py  room_geo.py  tri_box_intersection.py  tri_ray_intersection.py  (+1 more)
src/ruby_SU/: RoomExporter.rb
(+111 files in other folders)
