[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pffdtd"
version = "0.1.0"
description = "Pretty Fast FDTD"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Tobias Hienzsch", email = "post@tobias-hienzsch.de" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "h5py>=3.2.1",
    "matplotlib>=3.4.1",
    "mayavi>=4.7.2",
    "memory_profiler>=0.58.0",
    "numba>=0.53.0",
    "numpy>=1.20.1",
    "opencv-python>=4.10.0",
    "optuna>=3.6.1",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "polyscope>=0.1.6",
    "psutil>=5.8.0",
    "resampy>=0.2.2",
    "scipy>=1.7.0",
    "tqdm>=4.58.0",
    "vtk>=9.0.1",
]

[project.urls]
Homepage = "https://github.com/tobanteAudio/pffdtd"
Issues = "https://github.com/tobanteAudio/pffdtd/issues"

[project.optional-dependencies]
dev = ["conan>=2.6.0", "pre-commit>=3.8.0", "pylint>=3.2.6"]
test = ["pytest>=8.3.2", "pytest-cov>=5.0.0"]

[project.scripts]
pffdtd = "pffdtd.cli:main"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["src/python/test/*"]
